Updated tests for QuantityParser.