@@ -1,16 +1,15 @@
 package io.github.bagdad.excelparser.headerparser.columnparsers;
 
 import io.github.bagdad.excelparser.model.Storage;
-import io.github.bagdad.excelparser.headerparser.columns.Column;
+import io.github.bagdad.excelparser.headerparser.columns.CategoryColumn;
 import io.github.bagdad.excelparser.headerparser.columns.QuantityColumn;
 import io.github.bagdad.excelparser.utils.SubcategoryMapping;
 import io.github.bagdad.excelparser.utils.ExcelCellUtils;
-import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.poi.ss.usermodel.Cell;
 
 import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -36,7 +35,6 @@ public class QuantityParser extends CategoryParser {
         try {
             int result;
 
-            // what if will be "1>23". it is 123 or 23?
             if (cellValue.contains(MORE_QUANTITY_SYMBOL) || cellValue.contains(MORE_QUANTITY_WORD)) {
                 String numericValue = cellValue.replaceAll("\\D+", "");
                 result = (int) Double.parseDouble(numericValue) + 1;
@@ -50,11 +48,10 @@ public class QuantityParser extends CategoryParser {
         catch (NumberFormatException e) {
             return 0;
         }
-
     }
 
     @Override
-    public Set<Column> parseColumns(Map<Integer, List<Cell>> cellsByClass) {
+    public Set<CategoryColumn> parseColumns(Map<Integer, List<Cell>> cellsByClass) {
         log.info("Parsing quantity columns");
 
         if (cellsByClass.isEmpty()) {
@@ -63,19 +60,21 @@ public class QuantityParser extends CategoryParser {
 
         Map<String, List<Cell>> groupedCells = groupCellsBySubcategory(cellsByClass);
 
-        Set<Column> result = new HashSet<>();
-        for (Map.Entry<String, List<Cell>> entry : groupedCells.entrySet()) {
-            String subcategory = entry.getKey();
-            List<Cell> cells = entry.getValue();
-            result.addAll(arrangeSubcategoryValues(subcategory, cells));
+        Set<CategoryColumn> columns = new HashSet<>();
+        for (String subcategory : groupedCells.keySet()) {
+            List<Cell> cells = groupedCells.get(subcategory);
+            Set<CategoryColumn> arrangedColumns = arrangeSubcategoriesByNumber(subcategory, cells);
+            columns.addAll(arrangedColumns);
         }
 
-        return result;
+        return columns;
     }
 
     Map<String, List<Cell>> groupCellsBySubcategory(Map<Integer, List<Cell>> cellsByClass) {
+        log.info("Grouping quantity cells by subcategory");
+
         if (cellsByClass == null || cellsByClass.isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
 
         Map<String, List<Cell>> grouped = new HashMap<>();
@@ -92,51 +91,38 @@ public class QuantityParser extends CategoryParser {
         return grouped;
     }
 
-    Set<Column> arrangeSubcategoryValues(String subcategory, List<Cell> cells) {
+    Set<CategoryColumn> arrangeSubcategoriesByNumber(String subcategory, List<Cell> cells) {
         if (cells.isEmpty()) {
             return new HashSet<>();
         }
 
-        Set<Column> columns = new HashSet<>();
+        Set<CategoryColumn> columns = new HashSet<>();
         if (cells.size() == 1) {
             int columnIndex = cells.getFirst().getColumnIndex();
-            String key = subcategory + "1";
-            String storageName = subcategory + " 1";
-            Storage storage = new Storage(key, storageName);
-            columns.add(new QuantityColumn(columnIndex, key, storage));
+            columns.add(createQuantityColumn(subcategory, columnIndex, 1));
 
             return columns;
         }
+        else {
+            int minColumnIndex = cells.stream().mapToInt(Cell::getColumnIndex)
+                    .min()
+                    .orElseThrow();
 
-        cells.sort(Comparator.comparingInt(Cell::getColumnIndex));
+            cells.forEach(cell -> {
+                int sequenceNumber = cell.getColumnIndex() - minColumnIndex + 1;
+                columns.add(createQuantityColumn(subcategory, cell.getColumnIndex(), sequenceNumber));
+            });
 
-        int minColumnIndex = cells.getFirst().getColumnIndex();
-
-        for (Cell cell : cells) {
-            int sequenceNumber = cell.getColumnIndex() - minColumnIndex + 1;
-            String key = subcategory + sequenceNumber;
-            String storageName = subcategory + " " + sequenceNumber;
-            Storage storage = new Storage(key, storageName);
-            columns.add(new QuantityColumn(cell.getColumnIndex(), key, storage));
+            return columns;
         }
-
-        return columns;
     }
 
-    private String createKey(String key) {
-        return key + 1;
-    }
+    private QuantityColumn createQuantityColumn(String subcategory, int columnIndex, int sequenceNumber) {
+        String key = subcategory + sequenceNumber;
+        String storageName = subcategory + " " + sequenceNumber;
+        Storage storage = new Storage(key, storageName);
 
-    private String createKey(String key, int number) {
-        return key + number;
-    }
-
-    private String createStorage(String name) {
-        return name + 1;
-    }
-
-    private String createStorage(String name, int number) {
-        return name + number;
+        return new QuantityColumn(columnIndex, key, storage);
     }
 
 }
